# lvglcommon

./: .gitignore  CMakeLists.txt  README.md
cmake/: common.cmake  examples.cmake  lvgl.cmake  platform.cmake
examples/lv_demo_ejanus/: ejanus.c  ejanus.h  main.c
examples/lv_demo_ejanus/img/: img_dial_gaugenum1.c  img_dial_gaugenum2.c  img_dial_gaugenum4.c  img_dial_gaugenum5.c  img_dial_gaugenum7.c  img_dial_num0.c  img_dial_num1.c  img_dial_num3.c  img_dial_num4.c  img_dial_num5.c  img_dial_num6.c  img_dial_num7.c  img_dial_num8.c  img_dial_oil_warn.c  img_dial_water_norm.c
examples/lv_demo_ejanus2/: ejanus2.c  ejanus2.h  main.c
examples/lv_demo_ejanus2/img/: img_dial_gaugenum0.c  img_dial_gaugenum3.c  img_dial_gaugenum6.c  img_dial_needle.c  img_dial_num2.c  img_dial_num9.c  img_dial_oil_norm.c  img_dial_v2x_car.c  img_dial_water_warn.c
examples/lv_demo_ejanus2/version/: version.pri
examples/lv_demo_printer/: lv_demo_printer.c  lv_demo_printer.h  lv_demo_printer_theme.c  main.c
examples/lv_demo_printer/images/: lv_demo_printer_icon_bright.c  lv_demo_printer_icon_eco.c  lv_demo_printer_icon_hue.c  lv_demo_printer_icon_pc.c  lv_demo_printer_icon_tel.c  lv_demo_printer_icon_wifi.c  lv_demo_printer_img_btn_bg_1.c  lv_demo_printer_img_btn_bg_2.c  lv_demo_printer_img_btn_bg_3.c  lv_demo_printer_img_btn_bg_4.c  lv_demo_printer_img_cloud.c  lv_demo_printer_img_copy.c  (+11 more)
examples/lv_demo_widgets/: lv_demo_widgets.c  lv_demo_widgets.h  main.c
src/: lv_conf.h  lv_drv_conf.h
src/lv_custom/: lv_custom.c  lv_custom.h
src/lv_drivers/: win_drv.c  win_drv.h
(+39 files in other folders)
